--- a/deployments/kubernetes/helm/observer/templates/climate-alerts.yaml
+++ b/deployments/kubernetes/helm/observer/templates/climate-alerts.yaml
@@ -2,10 +2,10 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaAlertRuleGroup
 metadata:
-  name: {{ .Values.name }}-climate-alerts
+  name: {{ .Release.Name }}-climate-alerts
   namespace: {{ .Release.Namespace }}
 spec:
-  folderRef: {{ .Values.name }}-folder
+  folderRef: {{ .Release.Name }}-folder
   allowCrossNamespaceImport: true
   instanceSelector:
     matchLabels:
