--- a/deployments/kubernetes/helm/observer/templates/init-job.yaml
+++ b/deployments/kubernetes/helm/observer/templates/init-job.yaml
@@ -17,9 +17,33 @@ spec:
           command: ["/bin/sh", "-c"]
           args:
             - |
-              CONSUMPTION_BUCKET_ID=$(influx bucket create --org salex --name consumption --retention 365d --json | jq -r ".id")
-              influx auth create --org salex --token "$CONSUMPTION_TOKEN" --write-buckets "$CONSUMPTION_BUCKET_ID"
+              CONSUMPTION_BUCKET_ID=$(influx bucket list --name consumption --json 2>/dev/null | jq -r '.[0].id // empty')
+              if [ -z "$CONSUMPTION_BUCKET_ID" ]; then
+                CONSUMPTION_BUCKET_ID=$(influx bucket create --name consumption --retention 365d --json | jq -r ".id")
+                INFLUX_ORG_ID=$(influx org list --json | jq -r '.[] | select(.name == "'"$INFLUX_ORG"'") | .id')
+                curl -sS -X POST "$INFLUX_HOST/api/v2/authorizations" \
+                  -H "Authorization: Token $INFLUX_TOKEN" \
+                  -H "Content-Type: application/json" \
+                  -d "{
+                      \"orgID\": \"$INFLUX_ORG_ID\",
+                      \"token\": \"$CONSUMPTION_TOKEN\",
+                      \"description\": \"token for bucket 'consumption'\",
+                      \"permissions\": [
+                        {
+                          \"action\": \"write\",
+                          \"resource\": {
+                            \"type\": \"buckets\",
+                            \"id\": \"$CONSUMPTION_BUCKET_ID\"
+                          }
+                        }
+                      ]
+                  }"
+              fi
           env:
+            - name: INFLUX_ORG
+              value: salex
+            - name: INFLUX_HOST
+              value: http://{{ .Release.Name }}-influxdb2.{{ .Release.Namespace }}.svc.cluster.local
             - name: INFLUX_TOKEN
               valueFrom:
                 secretKeyRef:
@@ -28,8 +52,10 @@ spec:
             - name: CONSUMPTION_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: { { .Values.influxdb2.adminUser.existingSecret } }
+                  name: {{ .Values.influxdb2.adminUser.existingSecret }}
                   key: consumption-token
       imagePullSecrets:
-        - name: {{ .Values.container.imagePullSecrets[0].name }}
+        {{- if .Values.container.imagePullSecrets }}
+        {{- toYaml .Values.container.imagePullSecrets | nindent 8 }}
+        {{- end }}
       restartPolicy: OnFailure
