--- a/deployments/kubernetes/helm/observer/templates/dashboards.yaml
+++ b/deployments/kubernetes/helm/observer/templates/dashboards.yaml
@@ -12,6 +12,7 @@ metadata:
 spec:
   folderRef: {{ $root.Release.Name }}-folder
   resyncPeriod: 30s
+  allowCrossNamespaceImport: true
   instanceSelector:
     matchLabels:
       grafana: {{ $root.Values.config.grafana.instance }}
